add single-galler.sccs and import to style.scss

--- a/themes/sgsc/sass/style.scss
+++ b/themes/sgsc/sass/style.scss
@@ -63,5 +63,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "page-templates";
 @import "header";
 @import "front-page";
+@import "single-gallery";
 @import "footer";
 @import "about";
