getting closer with the toggle button

--- a/themes/sgsc/sass/_header.scss
+++ b/themes/sgsc/sass/_header.scss
@@ -10,6 +10,7 @@
 
 .search-field {
   width: 135px;
+
 }
 
 .search-submit {
@@ -25,6 +26,7 @@
   padding-left: 0;
   padding-right: 0;
   max-width: 172px;
+  min-width: 22.3px;
   }
   input {
     display: none;
