import archive-gallery to style.scss

--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1395,6 +1395,9 @@ object {
             text-align: center; } }
 
 /*--------------------------------------------------------------
+# Archive-Gallery
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
 # Single-Gallery Page
 --------------------------------------------------------------*/
 .single-gallery .content-area {
