add dynamic hero image to program page

--- a/themes/sgsc/sass/style.scss
+++ b/themes/sgsc/sass/style.scss
@@ -61,11 +61,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "content";
 @import "media";
 @import "page-templates";
-<<<<<<< HEAD
-@import "header";
-=======
 @import "header";
 @import "front-page";
 @import "footer";
 @import "about";
->>>>>>> 3ecacc94bbf9ee86da70a190e80cd083c30e1e95
+@import "programs";
