--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -552,7 +552,7 @@ a {
   a:visited {
     color: purple; }
   a:hover, a:focus, a:active {
-    color: #F5A623; }
+    color: midnightblue; }
   a:focus {
     outline: thin dotted; }
   a:hover, a:active {
