change m-donate to text-donate mixin

--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -51,7 +51,7 @@
                   display: flex;
                 }
               }
-              @include m-donate;
+              @include text-donate;
             }
             .program-event-post {
               width: 100%;
