--- a/themes/sgsc/sass/_programs.scss
+++ b/themes/sgsc/sass/_programs.scss
@@ -1,7 +1,51 @@
-// .page-id-32 .about-hero {
-//   height: 20rem;
-//   right: 0px;
-//   max-width: none;
-//   width: 100vw;
-//   position: absolute;
-// }
+.program-hero {
+  height: 19rem;
+  background-position: 95% -3%;
+  background-size: 135%;
+  background-repeat: no-repeat;
+}
+
+.page-template-page-programs {
+  .entry-header {
+    background: hsla(0,0%,100%,.8);
+    position: absolute;
+    width: 100%;
+    height: 7rem;
+    bottom: 22.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .entry-title {
+    font-weight: 500;
+    font-size: 1.4rem;
+    width: 9rem;
+    text-align: center;
+  }
+}
+
+.program-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+	li {
+    background: $orange;
+    width: 80%;
+		margin: 1rem;
+    padding: 3rem;
+    text-align: center;
+		border: 4px solid $orange;		
+	}
+	li:hover {
+		border: 4px solid black;
+	}
+	a {
+		color: black;
+    text-decoration: none;
+    font-size: 1.4rem;
+	}
+}
