--- a/themes/sgsc/sass/_archive-gallery.scss
+++ b/themes/sgsc/sass/_archive-gallery.scss
@@ -17,41 +17,50 @@
       .page-header {
         @include page-header;
       }
-      .has-post-thumbnail {
-        width: 463px;
-        height: 321px;
-        // margin: 0;
-        background: beige;
-        .entry-header {
-          width: 100%;
-          height: 100%;
-          display: flex;
-          position: relative;
-          overflow: hidden;
-          justify-content: center;
-          align-items: center;
-          .image-position {
+      .gallery-album {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-around;
+        .has-post-thumbnail {
+          width: 463px;
+          height: 321px;
+          margin: 0;
+          background: beige;
+          .entry-header {
             width: 100%;
             height: 100%;
-            img {
-              min-height: 100%;
-              max-height: 100%;
-              width: auto;
-              left: 50%;
-              top: 70%;
-              transform: translate(-50%, -70%);
-              max-width: none;
-              position: absolute;
-            }
-          }
-          .entry-title {
-            background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
-            z-index: 1;
-            height: 100%;
-            width: 100%;
             display: flex;
+            position: relative;
+            overflow: hidden;
             justify-content: center;
             align-items: center;
+            .image-position {
+              height: 100%;
+              img {
+                min-height: 100%;
+                max-height: 100%;
+                width: auto;
+                left: 50%;
+                top: 70%;
+                transform: translate(-50%, -70%);
+                max-width: none;
+                position: absolute;
+              }
+            }
+            .entry-title {
+              background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
+              z-index: 1;
+              height: 100%;
+              width: 100%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              text-decoration: none;
+              color: $black;
+              &:hover {
+                color: $orange;
+              }
+            }
           }
         }
       }
