--- a/themes/sgsc/sass/_mixins.scss
+++ b/themes/sgsc/sass/_mixins.scss
@@ -136,6 +136,7 @@
     position: relative;
     background: $orange;
     width: 100%;
+    color: $black;
     @include m-donate;
     .entry-meta {
       display: none;
