--- a/themes/sgsc/sass/_archive-gallery.scss
+++ b/themes/sgsc/sass/_archive-gallery.scss
@@ -25,6 +25,7 @@
           width: 463px;
           height: 321px;
           margin: 0;
+          margin-top: 32px;
           background: beige;
           .entry-header {
             width: 100%;
