--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1478,6 +1478,7 @@ object {
           width: 463px;
           height: 321px;
           margin: 0;
+          margin-top: 32px;
           background: beige; }
           .post-type-archive-gallery .content-area .site-main .lastest-gallery-section .gallery-album .has-post-thumbnail .entry-header {
             width: 100%;
