--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -306,18 +306,18 @@ th {
   font-style: normal; }
 
 @font-face {
-  font-family: 'montserratbold';
+  font-family: 'montserrat';
   src: url("../../assets/fonts/montserrat-bold-webfont.eot");
   src: url("../../assets/fonts/montserrat-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/montserrat-bold-webfont.woff2") format("woff2"), url("../../assets/fonts/montserrat-bold-webfont.woff") format("woff"), url("../../assets/fonts/montserrat-bold-webfont.ttf") format("truetype"), url("../../assets/fonts/montserrat-bold-webfont.svg#montserratbold") format("svg");
   font-weight: bold;
   font-style: normal; }
 
 @font-face {
-  font-family: 'montserratextrabold';
+  font-family: 'montserrat';
   src: url("../../assets/fonts/montserrat-extrabold-webfont.eot");
   src: url("../../assets/fonts/montserrat-extrabold-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/montserrat-extrabold-webfont.woff2") format("woff2"), url("../../assets/fonts/montserrat-extrabold-webfont.woff") format("woff"), url("../../assets/fonts/montserrat-extrabold-webfont.ttf") format("truetype"), url("../../assets/fonts/montserrat-extrabold-webfont.svg#montserratextrabold") format("svg");
   font-weight: 800;
-  font-style: normal; }
+  font-style: bold; }
 
 @font-face {
   font-family: 'montserrat';
