add typography font-family, weight, style, color

--- a/themes/sgsc/sass/_variables.scss
+++ b/themes/sgsc/sass/_variables.scss
@@ -49,7 +49,7 @@ $color__border-abbr: #666;
 $color__link: royalblue;
 $color__link-visited: purple;
 $color__link-hover: midnightblue;
-$color__text-main: #404040;
+$color__text-main: $black;
 $color__background-post: #248A83;
 $color-purple: #2f1339;
 $color-organe: #d99054;
