--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -370,7 +370,7 @@ input,
 select,
 textarea {
   color: #000000;
-  font-family: merriweather, sans-serif;
+  font-family: montserrat, merriweather, sans-serif;
   font-size: 16px;
   font-size: 1rem;
   line-height: 1.75; }
@@ -383,7 +383,7 @@ h4,
 h5,
 h6 {
   clear: both;
-  font-family: montserrat;
+  font-family: montserrat, merriweather, sans-serif;
   font-weight: normal;
   font-style: normal; }
 
@@ -411,7 +411,7 @@ h6 {
 p {
   margin-bottom: 1.5rem;
   font-size: 12px;
-  font-family: lato;
+  font-family: lato, novecentosanswide, sans-serif;
   font-weight: normal;
   font-style: normal; }
   @media screen and (min-width: 480px) {
@@ -939,7 +939,7 @@ object {
   outline: none;
   border: 2px solid #f5a623;
   border-radius: 25px;
-  font-family: montserrat; }
+  font-family: montserrat, merriweather, sans-serif; }
 
 .menu .fa {
   font-size: 2rem; }
@@ -1662,7 +1662,7 @@ footer {
 
 .textwidget {
   width: 125px;
-  font-family: lato;
+  font-family: lato, novecentosanswide, sans-serif;
   font-size: 12px; }
   .textwidget p:hover {
     color: #f5a623; }
@@ -1699,7 +1699,7 @@ footer {
   text-align: left;
   padding-left: 16px;
   margin-bottom: 25px;
-  font-family: lato;
+  font-family: lato, novecentosanswide, sans-serif;
   font-size: 10px; }
 
 @media all and (min-width: 480px) {
