--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1516,13 +1516,14 @@ object {
         -ms-flex-flow: row wrap;
             flex-flow: row wrap;
         -ms-flex-pack: distribute;
-            justify-content: space-around; }
+            justify-content: space-around;
+        -ms-flex-align: center;
+            align-items: center; }
         .post-type-archive-gallery .content-area .site-main .lastest-gallery-section .gallery-album .has-post-thumbnail {
           width: 463px;
           height: 321px;
           margin: 0;
-          margin-top: 32px;
-          background: beige; }
+          margin-top: 32px; }
           .post-type-archive-gallery .content-area .site-main .lastest-gallery-section .gallery-album .has-post-thumbnail .entry-header {
             width: 100%;
             height: 100%;
