--- a/themes/sgsc/sass/_mixins.scss
+++ b/themes/sgsc/sass/_mixins.scss
@@ -62,6 +62,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      height: 2.3rem;
+      width: 2.3rem;
       a {
         text-decoration: none;
         color: $black;
