style flex boxes on desktop program page

--- a/themes/sgsc/sass/_content.scss
+++ b/themes/sgsc/sass/_content.scss
@@ -33,8 +33,11 @@
 }
 
 .container {
-	width: 1024px;
-	margin: auto;
+	min-width: 320px;
+	@media (min-width: $d_width)  {
+		width: 1024px;
+		margin: auto;
+	}
 }
 
 /* Asides */
