--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -831,8 +831,11 @@ a {
   margin: 0 0 1.5rem; }
 
 .container {
-  width: 1024px;
-  margin: auto; }
+  min-width: 320px; }
+  @media (min-width: 1024px) {
+    .container {
+      width: 1024px;
+      margin: auto; } }
 
 /* Asides */
 .blog .format-aside .entry-title,
@@ -1806,6 +1809,10 @@ footer {
       flex-direction: column;
   -ms-flex-align: center;
       align-items: center; }
+  @media screen and (min-width: 480px) {
+    .program-list {
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap; } }
   .program-list li {
     background: #f5a623;
     width: 80%;
@@ -1819,6 +1826,21 @@ footer {
         justify-content: center;
     -ms-flex-align: center;
         align-items: center; }
+    @media screen and (min-width: 480px) {
+      .program-list li {
+        width: initial;
+        margin: 2rem 0 2rem 2rem;
+        height: 10rem;
+        -ms-flex: 0 1 46.8%;
+            flex: 0 1 46.8%; } }
+  @media screen and (min-width: 480px) {
+    .program-list li:nth-child(odd) {
+      margin: 2rem 2rem 2rem 0; } }
+  @media screen and (min-width: 480px) {
+    .program-list li:last-child {
+      margin: 2rem 0;
+      -ms-flex: 100%;
+          flex: 100%; } }
   .program-list li:hover {
     border: 4px solid black; }
   .program-list a {
