--- a/themes/sgsc/sass/_archive-gallery.scss
+++ b/themes/sgsc/sass/_archive-gallery.scss
@@ -9,6 +9,15 @@
     width: $d_width;
     display: flex;
     flex-flow: column nowrap;
+    .featured-gallery-section {
+      display: flex;
+      flex-flow: column;
+      justify-content: center;
+      align-items: center;
+      .page-header {
+        @include page-header;
+      }
+    }
     .lastest-gallery-section {
       display: flex;
       flex-flow: column;
@@ -41,6 +50,7 @@
                 min-height: 100%;
                 max-height: 100%;
                 width: auto;
+                min-width: 100%;
                 left: 50%;
                 top: 70%;
                 transform: translate(-50%, -70%);
