--- a/themes/sgsc/sass/_join-us.scss
+++ b/themes/sgsc/sass/_join-us.scss
@@ -26,13 +26,24 @@
     width: $d-width;
     background-image: url("../../assets/images/149-46.jpg");
     margin-bottom: 28px;
+    background-size: 100%;
+    
 }
 
 .rectangle {
     height: 356px;
+    box-sizing: border-box;
     width: 300px;
     background-color: rgba(255,255,255,0.8); 
-    h2 {
+    &:hover {
+        border: 4px solid $black;
+    }
+}
+
+
+
+.new-member, .membership-renewal, .volunteer {
+        h2 {
         font-family: $font__header;
         font-size: $font_d-body;
         width: 163px;
@@ -52,5 +63,3 @@
         line-height: 22px;
     }
 }
-
-.new-member, .membership-renewal, .volunteer {}
