--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1952,26 +1952,32 @@ footer {
       justify-content: space-between;
   width: 1024px;
   background-image: url("../../assets/images/149-46.jpg");
-  margin-bottom: 28px; }
+  margin-bottom: 28px;
+  background-size: 100%; }
 
 .rectangle {
   height: 356px;
+  box-sizing: border-box;
   width: 300px;
   background-color: rgba(255, 255, 255, 0.8); }
-  .rectangle h2 {
-    font-family: montserrat, merriweather, sans-serif;
-    font-size: 24px;
-    width: 163px;
-    height: 58px;
-    margin: auto;
-    margin-top: 38px;
-    text-align: center;
-    padding-bottom: 11px;
-    line-height: 29px; }
-  .rectangle p {
-    font-family: lato, novecentosanswide, sans-serif;
-    font-size: 18px;
-    width: 163px;
-    margin: auto;
-    margin-top: 11px;
-    line-height: 22px; }
+  .rectangle:hover {
+    border: 4px solid #000000; }
+
+.new-member h2, .membership-renewal h2, .volunteer h2 {
+  font-family: montserrat, merriweather, sans-serif;
+  font-size: 24px;
+  width: 163px;
+  height: 58px;
+  margin: auto;
+  margin-top: 38px;
+  text-align: center;
+  padding-bottom: 11px;
+  line-height: 29px; }
+
+.new-member p, .membership-renewal p, .volunteer p {
+  font-family: lato, novecentosanswide, sans-serif;
+  font-size: 18px;
+  width: 163px;
+  margin: auto;
+  margin-top: 11px;
+  line-height: 22px; }
