--- a/themes/sgsc/sass/_join-us.scss
+++ b/themes/sgsc/sass/_join-us.scss
@@ -35,6 +35,7 @@
     box-sizing: border-box;
     width: 300px;
     background-color: rgba(255,255,255,0.8); 
+    border: 4px solid rgba(255,255,255,0.0);
     &:hover {
         border: 4px solid $black;
     }
