--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1959,7 +1959,8 @@ footer {
   height: 356px;
   box-sizing: border-box;
   width: 300px;
-  background-color: rgba(255, 255, 255, 0.8); }
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 4px solid rgba(255, 255, 255, 0); }
   .rectangle:hover {
     border: 4px solid #000000; }
 
