--- a/themes/sgsc/sass/_join-us.scss
+++ b/themes/sgsc/sass/_join-us.scss
@@ -6,8 +6,8 @@
     display: flex;
     justify-content: center;
     background: $orange;
-    height: 160px;
-    width: $d_width;
+    height: 118px;
+    width: $mobile_width;
     margin: auto;
 }
 
@@ -23,17 +23,20 @@
     display: flex;
     margin: 0 auto;
     justify-content: space-between;
-    width: $d-width;
+    flex-direction: column;
+    max-width: $mobile-width;
     background-image: url("../../assets/images/149-46.jpg");
-    margin-bottom: 28px;
-    background-size: 100%;
-    
+    background-repeat: no-repeat;
+    height: 750px;
+    background-position: 60%;    
 }
 
 .rectangle {
-    height: 356px;
+    height: 208px;
+    max-width: $mobile-width;
     box-sizing: border-box;
-    width: 300px;
+    max-width: $mobile-width;
+    flex-direction: column;
     background-color: rgba(255,255,255,0.8); 
     border: 4px solid rgba(255,255,255,0.0);
     &:hover {
@@ -49,18 +52,79 @@
         font-size: $font_d-body;
         width: 163px;
         height: 58px;
-        margin: auto;
-        margin-top: 38px;   
+        margin: 0 auto;
         text-align: center;
-        padding-bottom: 11px;
         line-height: 29px;
     }  
     p {
-        font-family: $font__body;
-        font-size: $font_d-sub-body;
-        width: 163px;
-        margin: auto;
-        margin-top: 11px;
-        line-height: 22px;
+        display: none;
     }
 }
+
+
+// #post-18 {
+//     margin: 0;
+// }
+
+// .entry-header {
+//     display: flex;
+//     justify-content: center;
+//     background: $orange;
+//     height: 160px;
+//     width: $d_width;
+//     margin: auto;
+// }
+
+// .entry-title {
+//     margin: auto;
+// }
+
+// .entry-content {
+//     margin: 0;
+// }
+
+// .join-us-section {
+//     display: flex;
+//     margin: 0 auto;
+//     justify-content: space-between;
+//     width: $d-width;
+//     background-image: url("../../assets/images/149-46.jpg");
+//     margin-bottom: 28px;
+//     background-size: 100%;
+    
+// }
+
+// .rectangle {
+//     height: 356px;
+//     box-sizing: border-box;
+//     width: 300px;
+//     background-color: rgba(255,255,255,0.8); 
+//     border: 4px solid rgba(255,255,255,0.0);
+//     &:hover {
+//         border: 4px solid $black;
+//     }
+// }
+
+
+
+// .new-member, .membership-renewal, .volunteer {
+//         h2 {
+//         font-family: $font__header;
+//         font-size: $font_d-body;
+//         width: 163px;
+//         height: 58px;
+//         margin: auto;
+//         margin-top: 38px;   
+//         text-align: center;
+//         padding-bottom: 11px;
+//         line-height: 29px;
+//     }  
+//     p {
+//         font-family: $font__body;
+//         font-size: $font_d-sub-body;
+//         width: 163px;
+//         margin: auto;
+//         margin-top: 11px;
+//         line-height: 22px;
+//     }
+// }
