--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1934,8 +1934,8 @@ footer {
   -ms-flex-pack: center;
       justify-content: center;
   background: #f5a623;
-  height: 160px;
-  width: 1024px;
+  height: 118px;
+  width: 480px;
   margin: auto; }
 
 .entry-title {
@@ -1950,15 +1950,21 @@ footer {
   margin: 0 auto;
   -ms-flex-pack: justify;
       justify-content: space-between;
-  width: 1024px;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  max-width: 480px;
   background-image: url("../../assets/images/149-46.jpg");
-  margin-bottom: 28px;
-  background-size: 100%; }
+  background-repeat: no-repeat;
+  height: 750px;
+  background-position: 60%; }
 
 .rectangle {
-  height: 356px;
+  height: 208px;
+  max-width: 480px;
   box-sizing: border-box;
-  width: 300px;
+  max-width: 480px;
+  -ms-flex-direction: column;
+      flex-direction: column;
   background-color: rgba(255, 255, 255, 0.8);
   border: 4px solid rgba(255, 255, 255, 0); }
   .rectangle:hover {
@@ -1969,16 +1975,9 @@ footer {
   font-size: 24px;
   width: 163px;
   height: 58px;
-  margin: auto;
-  margin-top: 38px;
+  margin: 0 auto;
   text-align: center;
-  padding-bottom: 11px;
   line-height: 29px; }
 
 .new-member p, .membership-renewal p, .volunteer p {
-  font-family: lato, novecentosanswide, sans-serif;
-  font-size: 18px;
-  width: 163px;
-  margin: auto;
-  margin-top: 11px;
-  line-height: 22px; }
+  display: none; }
